# AiZO-Projekt1

./: CMakeLists.txt  DoubleAnalysis.cpp  FloatAnalysis.cpp  IntAnalysis.cpp  IntAnalysis.h  MenuFunctions.cpp  MenuFunctions.h  ShellMethodSortAnaliza.txt  SortAlgDouble.cpp  SortAlgDouble.h  SortAlgFloat.cpp  SortAlgFloat.h  SortAlgInt.cpp  SortAlgInt.h  dane.txt  heapSortAnaliza.xlsx  hibbardMethodSortAnaliza.txt  hibbardMethodSortAnaliza.xlsx  insertionSort.xlsx  insertionSortAnaliza.txt  insertionSortRandAnaliza.txt  leftQuickSortAnaliza.txt  leftQuickSortAnaliza.xlsx  main.cpp  middleQuickSortAnaliza.xlsx  randQuickSortAnaliza.txt  randQuickSortAnaliza.xlsx  rightQuickSortAnaliza.txt  rightQuickSortAnaliza.xlsx
Files/: HeapSortAnaliza.txt  Sprawozdanie AiZO-Projekt1.docx  dane.txt  danefloat.txt  heapSortAnaliza.xlsx  hibbardMethodSortAnaliza.xlsx  insertionSort.xlsx  insertionSortDoubleAnaliza.txt  insertionSortDoubleAnaliza.xlsx  insertionSortFloatAnaliza.xlsx  insertionSortRandAnaliza.txt  leftQuickSortAnaliza.txt  leftQuickSortAnaliza.xlsx  middleQuickSortAnaliza.txt  middleQuickSortAnaliza.xlsx  randQuickSortAnaliza.xlsx  rightQuickSortAnaliza.txt  rightQuickSortAnaliza.xlsx  shellSortMethodAnaliza.xlsx  ~$rawozdanie AiZO-Projekt1.docx  ~WRL1725.tmp
Microseconds/: HeapSortAnaliza.txt  ShellMethodSortAnaliza.txt  hibbardMethodSortAnaliza.txt  insertionSortAnaliza.txt  insertionSortDoubleAnaliza.txt  insertionSortFloatAnaliza.txt  leftQuickSortAnaliza.txt  middleQuickSortAnaliza.txt  randQuickSortAnaliza.txt  rightQuickSortAnaliza.txt
SortAlgType/: SortAlgInt.h  (+5 more)
(+5 files in other folders)
